# Limits_droper

./: CMakeLists.txt  README.md  limits_ui  limits_ui.c  mchbar_base.h  mchbar_pl_write.c  mchbar_read.c  mchbar_scan.c
.github/workflows/: build.yml  release.yml
assets/: limits_droper.desktop
helper/: limits_helper.c
qt_ui/: main.cpp
